feat: Migrate to Vite and add Gemini API support
Replaces the existing build setup with Vite for faster development and production builds. Adds necessary dependencies and configuration for the Gemini API, enabling future AI-driven features.

Updates include:
- `package.json`: Added Vite, React, React Router, TypeScript, and Gemini API dependencies. Modified scripts for development (`dev`) and production builds (`build`, `preview`).
- `index.html`: Updated import map to reflect Vite's module resolution and CDN paths.
- `pages/CollectionPage.tsx`: Introduced input validation and error handling for the points update modal.
- `components/ModelFormModal.tsx`: Added a duplicate model check before adding new entries.
- `vite.config.ts`: Simplified Vite configuration.

--- a/index.html
+++ b/index.html
@@ -37,20 +37,16 @@
         },
       }
     </script>
-  <!--
-    Import Map for managing JavaScript modules.
-    This allows using bare module specifiers (e.g., "react") directly in the code,
-    which are then resolved to the specified URLs. This is a modern browser feature
-    that simplifies module management without a complex build step.
-  -->
-  <script type="importmap">
+<script type="importmap">
 {
   "imports": {
-    "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
     "react/": "https://aistudiocdn.com/react@^19.2.0/",
     "react": "https://aistudiocdn.com/react@^19.2.0",
-    "react-router-dom": "https://aistudiocdn.com/react-router-dom@^7.9.4",
-    "@google/genai": "https://aistudiocdn.com/@google/genai@^1.25.0"
+    "vite": "https://aistudiocdn.com/vite@^7.1.10",
+    "@google/genai": "https://aistudiocdn.com/@google/genai@^1.25.0",
+    "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
+    "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.0.4",
+    "react-router-dom": "https://aistudiocdn.com/react-router-dom@^7.9.4"
   }
 }
 </script>
