feat: Add CSV import/export functionality
Integrates Papaparse for robust CSV parsing in the browser, enabling bulk import and export of model data.

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!--
  * @file index.html
  * @description The main HTML file that serves as the entry point for the web application.
- * It sets up the basic document structure, includes necessary external libraries like Tailwind CSS for styling
- * and PapaParse for CSV handling, defines a dark theme, and specifies the root element for the React app.
+ * It sets up the basic document structure, includes necessary external libraries like Tailwind CSS for styling,
+ * defines a dark theme, and specifies the root element for the React app.
 -->
 <!DOCTYPE html>
 <html lang="en">
@@ -13,8 +13,6 @@
     <title>Tabletop Model Collector</title>
     <!-- Tailwind CSS for utility-first styling -->
     <script src="https://cdn.tailwindcss.com"></script>
-    <!-- PapaParse for robust CSV parsing in the browser -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/papaparse/5.3.2/papaparse.min.js"></script>
     <!--
       Tailwind CSS configuration script.
       This configures a dark theme with a custom color palette for a consistent look and feel.
