fix: Correct meta charset and import map order
The character encoding meta tag was incorrectly set to "UTF-g". This commit corrects it to "UTF-8".

Additionally, the import map order was rearranged for consistency, although this change has no functional impact.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-g" />
+    <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tabletop Model Collector</title>
@@ -38,14 +38,14 @@
 <script type="importmap">
 {
   "imports": {
-    "react/": "https://aistudiocdn.com/react@^19.2.0/",
     "react": "https://aistudiocdn.com/react@^19.2.0",
-    "vite": "https://aistudiocdn.com/vite@^7.1.10",
-    "@google/genai": "https://aistudiocdn.com/@google/genai@^1.25.0",
     "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
-    "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.0.4",
+    "react/": "https://aistudiocdn.com/react@^19.2.0/",
     "react-router-dom": "https://aistudiocdn.com/react-router-dom@^7.9.4",
-    "papaparse": "https://aistudiocdn.com/papaparse@^5.5.3"
+    "@google/genai": "https://aistudiocdn.com/@google/genai@^1.25.0",
+    "papaparse": "https://aistudiocdn.com/papaparse@^5.5.3",
+    "vite": "https://aistudiocdn.com/vite@^7.1.10",
+    "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.0.4"
   }
 }
 </script>
