feat: Implement dynamic theming and toast notifications
This commit introduces dynamic theming for the application, allowing game systems to define custom color schemes that influence the UI. It also adds a toast notification system to provide user feedback for various actions.

Theming is applied via CSS variables, which are set based on the `colorScheme` defined in the `GameSystem` type. A new `ToastContainer` component is introduced to manage and display notifications, sourced from the application's context.

Initial seeding in `server.js` now includes default color schemes for existing game systems. The `CollectionPage` includes an effect to dynamically update theme colors based on the selected game system filter. The `index.html` has been updated to reference theme colors using CSS variables.

The `types.ts` file has been updated to include the `colorScheme` property in the `GameSystem` interface and the `ToastMessage` type. The `App.tsx` now includes the `ToastContainer` component.

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
         theme: {
           extend: {
             colors: {
-              'primary': '#4f46e5',
-              'secondary': '#10b981',
+              'primary': 'var(--theme-primary-color, #4f46e5)',
+              'secondary': 'var(--theme-secondary-color, #10b981)',
               'background': '#111827',
               'surface': '#1f2937',
               'text-primary': '#f9fafb',
